--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   sign_in_with_apple: ^5.0.0
   jwt_decoder: ^2.0.1
   firebase_dynamic_links: ^5.4.4
+  firebase_auth: ^4.14.0
+  firebase_core: ^2.22.0
+  google_sign_in: ^6.1.6
+  flutter_facebook_auth: ^6.0.3
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
