login google ios

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -78,5 +78,18 @@
         <string>fbapi</string>
         <string>fb-messenger-share-api</string>
     </array>
+
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>com.googleusercontent.apps.369087171178-alsh5866r89em2e9i5prlqo7a4q8r8ov</string>
+            </array>
+        </dict>
+    </array>
+
 </dict>
 </plist>
