--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_sign_in: ^6.1.6
   flutter_facebook_auth: ^6.0.3
   http: ^1.1.0
+  flutter_line_sdk: ^2.3.6
 
 dev_dependencies:
   flutter_test:
