--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>369087171178-alsh5866r89em2e9i5prlqo7a4q8r8ov.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.369087171178-alsh5866r89em2e9i5prlqo7a4q8r8ov</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>369087171178-4fcbtjigptunq459r9kt2idac7tco2ci.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyAZFjruBVN3ZPcxXnLHf6kEuayhEJXOPUg</string>
 	<key>GCM_SENDER_ID</key>
