--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -98,6 +98,18 @@
                 <string>fb875946810771217</string>
             </array>
         </dict>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+              <string>line3rdp.$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+            </array>
+        </dict>
+    </array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>lineauth2</string>
     </array>
 </dict>
 </plist>
