--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,12 +26,12 @@ jobs:
       - run: flutter build ios --config-only -t ./lib/main.dart
       - uses: yukiarrr/ios-build-action@v1.11.1
         with:
-          project-path: Runner.xcodeproj
+          project-path: ios/Runner.xcodeproj
           p12-base64: ${{ secrets.P12_BASE64 }}
           mobileprovision-base64: ${{ secrets.MOBILEPROVISION_BASE64 }}
           code-signing-identity: ${{ secrets.CODE_SIGNING_IDENTITY }}
           team-id: ${{ secrets.TEAM_ID }}
-          workspace-path: Runner.xcworkspace
+          workspace-path: ios/Runner.xcworkspace
 
       - name: 'Upload app to TestFlight'
         uses: apple-actions/upload-testflight-build@v1
